# CompVison_ML_MovSport_2026_USP

./: .gitignore  README.md  main.aux  main.out  main.synctex(busy)  main.tex  preto.sty  pyproject.toml  references.bib  requirements.txt
src/: README.md  img7x7.py  img_001.raw  makedataset.py  modelo.onnx  modelo.onnx.data  modelo_rastreador.pth  modelo_teste.pth  pixel_central_7x7.raw  png2raw.py  predictblackdot.py  resultados_rastreamento.csv  trainblack7x7.py  visualizar_rede.py
src/dataset_pontos/: labels.csv
